# polar_llama

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md  dotenv.pyi  polars.pyi  polars_mcp_runtime.pyi  pyproject.toml  requirements.txt  run.py
.github/workflows/: CI.yml  test-llm-apis.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  MCP_INTEGRATION.md  VECTOR_SIMILARITY_AND_ANN.md
examples/: combined_usage_tracking_example.py  token_usage_example.py
polar_llama/: __init__.py  expressions.py  hierarchical_taxonomy.py  label_first_taxonomy.py  polar_llama.pyi  taxonomy_refinement.py  types.py
src/: ann.rs  cache.rs  expressions.rs  lib.rs  utils.rs
src/model_client/: anthropic.rs  bedrock.rs  gemini.rs  groq.rs  mod.rs  openai.rs
tests/: README.md  conftest.py  model_client_tests.rs  test_basic.py  test_cache.py  test_embeddings.py  test_imports.py  test_inference.py  test_mcp_integration.py  test_mcp_submit.py  test_message_arrays.py  test_pig_latinnify.py  test_provider.py  test_structured_outputs.py  test_taxonomy_tagging.py
