[package]
name = "polar-llama"
version = "0.1.0"
edition = "2021"

[lib]
name = "polar_llama"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.21.2"

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.13.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
polars = { version = "0.39.2", default-features = false }
polars-arrow = { version = "0.37.0", default-features = false }
polars-core = { version = "0.37.0", default-features = false }
futures = "0.3"
ureq = "0.11"
tokio = { version = "1", features = ["full"] }
once_cell = "1"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
